--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="title">Etch-A-Sketch</div>
+		<div class="title">Esoteric etch-a-sketch</div>
 		<div class="options-sketch-container">
 			<div class="options">
 				<div>Options</div>
 				<div class="interaction-panel">
 					<input type="button" value="Color" />
 					<input type="button" value="Color" />
-					<input type="button" value="Color" />
+					<input id="clear" type="button" value="Clear" />
 					<div>
 						<input type="range" name="size" min="1" max="10">
 						<label for="size">Size</label>
@@ -22,7 +22,8 @@
 				</div>
 			</div>
 			<div class="sketchpad">
-				<div class="drawing-box"></div>
+				<div class="drawing-box">
+				</div>
 			</div>
 		</div>
 	</body>
